@@ -4,9 +4,8 @@ texi2html_TEXINFOS = custhtml.texi custpage.texi \
                      extfile.texi ifo.texi \
                      initfile.texi options.texi \
                      custhtml-header.htmltexi \
-                     reference.texi \
-                     version.texi
-#
+                     reference.texi
+
 CLEANFILES = texi2html.ps texi2html.pdf texi2html.html \
              texi2html.ascii
 #
@@ -23,12 +22,14 @@ MAINTAINERCLEANFILES = \
 
 all: info texi2html.html
 
-texi2html.html: texi2html.texi $(texi2html_TEXINFOS) $(TEXI2HTML) Makefile
+texi2html.html: texi2html.texi $(srcdir)/version.texi $(texi2html_TEXINFOS) \
+		$(TEXI2HTML) Makefile
 	TEXINPUTS=$(srcdir)::$$TEXINPUTS \
 	  $(PERL) $(TEXI2HTML) -V $<
-# Should be using pdftex - it preserves links in PDF
-texi2html.pdf: texi2html.ps
-	$(PS2PDF) texi2html.ps texi2html.pdf
+
+texi2html.pdf: texi2html.texi $(srcdir)/version.texi $(texi2html_TEXINFOS)
+	TEXINPUTS=$(srcdir):$$TEXINPUTS \
+	  MAKEINFO='$(MAKEINFO) -I $(srcdir)' $(TEXI2DVI) --pdf $<
 
 # Do not create info files for distribution
 dist-info:
